--- a/assets/style.css
+++ b/assets/style.css
@@ -427,7 +427,8 @@ PRICING
 }
 .plans{
  
-  width: 1280px;
+  max-width: 1280px;
+  width: 100%;
   height: 660px;
   display: flex;
   flex-wrap: wrap;
@@ -686,4 +687,75 @@ FAQ
   border: 1px solid lightgrey;
   width: 800px;
   height: 65px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.dropdown__btn{
+  width: 40px;
+  height: 40px;
+}
+/*
+
+BOX CONTAINER
+
+*/
+#reactions{
+  margin: 200px 0px;
+}
+.bottom__box__container{
+ border: 1px solid lightslategrey;
+ border-radius: 10px;
+  max-width: 1250px;
+  width: 100%;
+  height: 300px;
+  display: flex;
+  align-items: center;
+ justify-content: center;
+  background-image: url(overlapping-circles.svg);
+  background-repeat: 3px;
+  background-color: #8D72E1;
+}
+.box__para{
+  color: rgb(247 250 252 );
+  font-size: 30px;
+  font-weight: 500;
+}
+.box__description{
+  display: flex;
+  justify-content: space-between;
+  width: 93%;
+}
+.lefty{
+  width: 160px;
+  height: 60px;
+  border: 1px solid rgb(245 101 101);
+  border-radius: 100px;
+  background-color: rgb(245 101 101);
+  font-size: 15px;
+  color: #fff;
+  font-weight: 500;
+  margin: 0px 13px;
+
+}
+.lefty:hover{
+  background-color: #DC3535;
+  border: 1px solid #DC3535;
+}
+.righty{
+  width: 160px;
+  height: 60px;
+  border: 1px solid #fff;
+  border-radius: 100px;
+  background-color: #8D72E1;
+  font-size: 15px;
+  color: #fff;
+  font-weight: 500;
+  margin: 0px 13px;
+
+}
+.righty:hover{
+  background-color: #fff;
+  border: 1px solid #fff;
+  color: #8D72E1;
 }
