--- a/assets/style.css
+++ b/assets/style.css
@@ -13,8 +13,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
   }
-
+body{
+  max-width: 100vw;
+    overflow-x: hidden;
+}
 /*
 
 NAVBAR
@@ -153,6 +157,7 @@ landing
 .descrip__section{
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   
 }
 .description__input{ 
@@ -621,6 +626,8 @@ TESTIMONIALS
 
 #tests{
   margin: 200px 0px;
+  height: 101vw;
+  display: flex;
 }
 .book__ratings{
   margin: 24px 0px;
@@ -761,10 +768,13 @@ BOX CONTAINER
 FOOTER
 
 */
+footer{
+  width: 100%;
+  width: 1440px;
+}
 .footer__description{
- width: 1440px;
+ 
  height: auto;
-  
   display: flex;
   flex-direction: column;
   align-items: center;
