--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
     
   }
+  html{
+    scroll-behavior: smooth;
+    width: 101vw;
+  }
   .row{
     width: 100%;
     max-width: 1350px;
@@ -16,9 +20,9 @@
     flex-wrap: wrap;
   }
 body{
-  max-width: 100vw;
     overflow-x: hidden;
 }
+
 /*
 
 NAVBAR
@@ -29,6 +33,8 @@ NAVBAR
     align-items: center;
     justify-content: space-between;
     padding: 24px 0px ;
+    width: 100%;
+    max-width: 1200px;
 }
 .nav__links{
   display: flex;
@@ -157,7 +163,7 @@ landing
 .descrip__section{
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
+
   
 }
 .description__input{ 
@@ -626,8 +632,9 @@ TESTIMONIALS
 
 #tests{
   margin: 200px 0px;
-  height: 101vw;
+  height: 40vw;
   display: flex;
+  
 }
 .book__ratings{
   margin: 24px 0px;
@@ -768,19 +775,18 @@ BOX CONTAINER
 FOOTER
 
 */
-footer{
-  width: 100%;
-  width: 1440px;
-}
+
 .footer__description{
  
- height: auto;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   border: 1px solid lightgrey;
   background-color: #3F0071;
+  width: 100%;
+  max-width: 1440px;
 }
 .main__header{
   color: #fff;
@@ -793,6 +799,7 @@ footer{
 }
 .top__half{
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   max-width: 1200px;
@@ -805,6 +812,7 @@ footer{
 }
 .hold{
   display: flex;
+ 
 }
 .bottom__half{
   display: flex; 
