--- a/assets/style.css
+++ b/assets/style.css
@@ -8,11 +8,9 @@
   }
   html{
     scroll-behavior: smooth;
-    width: 101vw;
+   
   }
   .row{
-    width: 100vw;
-   
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -20,9 +18,13 @@
     flex-wrap: wrap;
   }
 body{
-  max-width: 100vw;
-  overflow-x: hidden;
-   
+  max-width: 95vw;
+  width: 100%; 
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column; 
+  margin: 0px 32px;
 }
 
 /*
@@ -164,9 +166,8 @@ landing
 }
 .descrip__section{
   display: flex;
-  justify-content: space-between;
-
-  
+ 
+  justify-content: space-between;  
 }
 .description__input{ 
   border: 1px solid black;
@@ -273,12 +274,13 @@ QUALITY WORK
   
 }
 
-#work__description__img--wrapper{
+.work__description__img--wrapper{
   width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-left: 30px;
 
 
 
@@ -288,7 +290,7 @@ QUALITY WORK
   height: 500px;
   border: 1px solid rgb(124 139 161);
   border-radius: 4px;
-  margin-left: 30px;
+ 
 }
 .learn__more{
   width: 170px;
@@ -439,7 +441,7 @@ PRICING
  
   max-width: 1280px;
   width: 100%;
-  height: 660px;
+  height: auto;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -725,7 +727,7 @@ BOX CONTAINER
   display: flex;
   align-items: center;
  justify-content: center;
-  background-image: url(overlapping-circles.svg);
+  background-image: url(bubbs.svg);
   background-repeat: 3px;
   background-color: #8D72E1;
 }
