--- a/assets/style.css
+++ b/assets/style.css
@@ -32,14 +32,17 @@ body{
 NAVBAR
 
 */
-  nav{
+nav{
+  max-width: 100vw;
+  width: 100%;
+
+}
+  .nav__container{
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 24px 0px ;
-    width: 100%;
-    max-width: 1200px;
-}
+  }
 .nav__links{
   display: flex;
   justify-content: center;
@@ -178,6 +181,63 @@ landing
   left: 20px;
   font-size: 20px;
 
+}
+.btn__menu{
+  font-size: 40px;
+  right: 20px;
+  top: 10px;
+  background-color: transparent;
+  text-align: center;
+  border: none; 
+  color: rgb(100 21 255 ); 
+  display: none;
+  position: absolute;
+  padding: 8px;
+ 
+}
+.menu__backdrop{
+  position: absolute;
+  background-color: #242424;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 300ms ease;
+}
+.menu--open .menu__backdrop{
+  visibility: visible;
+  opacity: 1;
+}
+.menu--open{
+  height: 100vh;
+  overflow-y: hidden;
+}
+.btn__menu--close{
+  position: absolute;
+  right: 20px;
+  top: 10px;
+  padding: 8px;
+  color: #fff;
+}
+.menu__links{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+}
+.menu__link{
+  color: white;
+}
+.menu__list{
+  padding: 32px 0px;
+  font-size: 40px;
 }
 
 /*
@@ -843,13 +903,27 @@ footer{
   width: 20px;
  }
 /*SMALL PHONES ,TABLETS , LARGE SMARTPHONES*/
-@media (max-width:768px) {
- 
+@media (max-width: 768px) {
+  .nav__links{
+    display: none;
+   }
+  .btn__menu{
+   display: block;
+  }
 }
 
 
 
 /* SMALL PHONES , LARGE SMARTPHONES*/
-@media (max-width:550px) {
- 
+@media (max-width: 550px) {
+ .nav__links{
+  display: none;
+ }
+.btn__menu{
+ display: block;
+}
+.nav__container{
+  width: 25em;
+  
+}
 }
