--- a/assets/style.css
+++ b/assets/style.css
@@ -773,16 +773,48 @@ FAQ
 .drop__top{
   padding: 14px;
   display: flex;
+  
   align-items: center;
   justify-content: space-between;
   
 }
 .drop__para{
   text-align: center;
+  position: absolute;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 300ms ease;
 }
+.open--drop .drop__para{
+  visibility: visible;
+  opacity: 1;
+}
+.open--drop{
+  height: 20vh;
+}
+
 .dropdown__btn{
-  width: 40px;
-  height: 40px;
+    font-size: 40px;
+   
+    background-color: transparent;
+    text-align: center;
+    border: none; 
+    color: rgb(100 21 255 ); 
+   
+   
+    padding: 8px;
+   
+  
+ 
+}
+.close__dropdown{
+  transform: rotate(180deg);
+    position: absolute;
+   
 }
 /*
 
