--- a/assets/style.css
+++ b/assets/style.css
@@ -773,12 +773,11 @@ FAQ
 .drop__top{
   padding: 14px;
   display: flex;
-  
   align-items: center;
   justify-content: space-between;
   
 }
-.drop__para{
+.open__drop{
   text-align: center;
   position: absolute;
   z-index: 1;
@@ -789,22 +788,28 @@ FAQ
   opacity: 0;
   transition: all 300ms ease;
 }
+.drop__para{
+  color: blueviolet;
+}
 .open--drop .drop__para{
   visibility: visible;
   opacity: 1;
 }
+
 .open--drop{
   height: 20vh;
 }
 
 .dropdown__btn{
     font-size: 40px;
-   
+    position: relative;
+    right: 0px;
     background-color: transparent;
     text-align: center;
     border: none; 
     color: rgb(100 21 255 ); 
-   
+    visibility: visible;
+    opacity: 1;
    
     padding: 8px;
    
@@ -813,7 +818,7 @@ FAQ
 }
 .close__dropdown{
   transform: rotate(180deg);
-    position: absolute;
+   
    
 }
 /*
