--- a/assets/style.css
+++ b/assets/style.css
@@ -977,7 +977,50 @@ footer{
  }
 /*SMALL PHONES ,TABLETS , LARGE SMARTPHONES*/
 @media (max-width: 768px) {
+  .nav__links{
+    display: none;
+   }
+  .btn__menu{
+   display: block;
+  }
+  .nav__container{
+    width: 25em;
+  }
+  .description{
+    width: 100%;
+  }
+  .descrip__section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .description__title{
+    font-size: 30px;
+    text-align: center;
   
+  }
+  .description__para{
+    font-size: 17px;
+    text-align: center;
+  }
+  .description__input{
+  width: 100%;
+  }
+  .get__started{
+    
+   
+  
+  }
+  .description__last{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .description__img--wrapper{
+    width: 100%;
+  }
 }
 
 
